--- a/index.html
+++ b/index.html
@@ -3560,9 +3560,9 @@
         <div class="ft-main-item">
           <h2 class="ft-title">Group Pages</h2>
           <ul class="ul nav nav-pills flex-column"">
-            <li class="lifoot"><a class="a" href="https://www.facebook.com/groups/221590219060567/?ref=share">A Thread Official</a></li>
-            <li class="lifoot"><a class="a" href="https://www.facebook.com/groups/2879416018845200/?ref=share">A Thread SPG</a></li>
-            <li class="lifoot"><a class="a" href="https://www.facebook.com/groups/2914412948639656/?ref=share">A Thread Diary</a></li>
+            <li class="lifoot"><a class="a" href="https://web.facebook.com/groups/athread3/?ref=share&_rdc=1&_rdr">A Thread Official</a></li>
+            <li class="lifoot"><a class="a" href="https://web.facebook.com/groups/2879416018845200/?ref=share&_rdc=1&_rdr">A Thread SPG</a></li>
+            <li class="lifoot"><a class="a" href="https://web.facebook.com/groups/2914412948639656/?ref=share&_rdc=1&_rdr">A Thread Diary</a></li>
             <li class="nav-item lifoot"><a class="disabled"><del>A Thread Horror</del></a></li>
           </ul>
         </div>
