--- a/index.html
+++ b/index.html
@@ -390,6 +390,18 @@
   animation-delay: 2s;
   }
 
+  .spanid1:nth-child(11){
+  animation-delay: 2.2;
+  }
+
+  .spanid1:nth-child(12){
+  animation-delay: 2.4s;
+  }
+
+  .spanid1:nth-child(13){
+  animation-delay: 2.6s;
+  }
+
   .img4 {
   position: absolute;
   width: 100px;
@@ -3110,16 +3122,19 @@
       <img class="img4" src="BoyIcon.png" alt="" />
       <h4 class="adminsign1"><a class="aadminsign1">Moderators</a></h4>
         <div class="id1">
-          <span class="spanid1">C</span>
-          <span class="spanid1">L</span>
-          <span class="spanid1">E</span>
+          <span class="spanid1">M</span>
           <span class="spanid1">O</span>
-          <span class="spanid1">_</span>
-          <span class="spanid1">F</span>
+          <span class="spanid1">D</span>
+          <span class="spanid1">E</span>
+          <span class="spanid1">R</span>
           <span class="spanid1">A</span>
-          <span class="spanid1">L</span>
-          <span class="spanid1">Y</span>
+          <span class="spanid1">T</span>
+          <span class="spanid1">O</span>
+          <span class="spanid1">R</span>
           <span class="spanid1">N</span>
+          <span class="spanid1">A</span>
+          <span class="spanid1">M</span>
+          <span class="spanid1">E</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
@@ -3130,7 +3145,7 @@
         <p class="motto14">Blablabla</p>
         <p class="motto15">Blablabla</p>
       <div class="iconsid1">
-        <a href="https://web.facebook.com/cleo.falyn.7/" class="linkid1"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="linkid1"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="linkid1"><i class="fab fa-instagram"></i></a>
         <a href="#" class="linkid1"><i class="fab fa-twitter"></i></a>
         <a href="#" class="linkid1"><i class="fab fa-whatsapp"></i></a>
