--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
   }
 
   .front1{
-  background:linear-gradient(15deg , #4d4ef5 , #72f3ee);
+  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
   }
 
   .back1{
-  background:linear-gradient(135deg, #f35efa , #59fbfe);
+  background:linear-gradient(135deg, #fc6efa , #fe5758);
   transform:rotateY(-180deg);
   }
 
@@ -509,7 +509,7 @@
   inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
   0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
   transition:.4s;
-  color: #7e57c2;
+  color: #f7979a;
   }
 
   .linkid1:before{
