--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
   .id2{
   position: absolute;
   bottom: 110px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   }
 
   .id2 .spanid2{
@@ -644,42 +644,6 @@
   animation-delay: .8s;
   }
 
-  .spanid2:nth-child(5){
-  animation-delay: 1s;
-  }
-
-  .spanid2:nth-child(6){
-  animation-delay: 1.2s;
-  }
-
-  .spanid2:nth-child(7){
-  animation-delay: 1.4;
-  }
-
-  .spanid2:nth-child(8){
-  animation-delay: 1.6s;
-  }
-
-  .spanid2:nth-child(9){
-  animation-delay: 1.8s;
-  }
-
-  .spanid1:nth-child(10){
-  animation-delay: 2s;
-  }
-
-  .spanid1:nth-child(11){
-  animation-delay: 2.2;
-  }
-
-  .spanid1:nth-child(12){
-  animation-delay: 2.4s;
-  }
-
-  .spanid1:nth-child(13){
-  animation-delay: 2.6s;
-  }
-
   .img5 {
   position: absolute;
   width: 100px;
@@ -730,6 +694,7 @@
   transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
+  transform: translateX(-50%);
   }
 
   .motto23{
@@ -739,6 +704,7 @@
   transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
+  transform: translateX(-50%);
   }
 
   .motto24{
@@ -748,6 +714,7 @@
   transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
+  transform: translateX(-50%);
   }
 
   .motto25{
@@ -757,6 +724,7 @@
   transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
+  transform: translateX(-50%);
   }
 
   .iconsid2 {
@@ -3119,36 +3087,27 @@
 <div class = "card1-container ins">
   <div class = "card1">
     <div class = "front1">
-      <img class="img4" src="BoyIcon.png" alt="" />
-      <h4 class="adminsign1"><a class="aadminsign1">Moderators</a></h4>
+      <img class="img4" src="AraGhost.jpeg" alt="" />
+      <h4 class="adminsign1"><a class="aadminsign1">Moderator</a></h4>
         <div class="id1">
-          <span class="spanid1">M</span>
-          <span class="spanid1">O</span>
+          <span class="spanid1">I</span>
+          <span class="spanid1">S</span>
           <span class="spanid1">D</span>
-          <span class="spanid1">E</span>
-          <span class="spanid1">R</span>
           <span class="spanid1">A</span>
-          <span class="spanid1">T</span>
-          <span class="spanid1">O</span>
-          <span class="spanid1">R</span>
-          <span class="spanid1">N</span>
-          <span class="spanid1">A</span>
-          <span class="spanid1">M</span>
-          <span class="spanid1">E</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back1">
         <a class="mottosign1">Motto</a>
-        <p class="motto12">Blablabla</p>
-        <p class="motto13">Blablabla</p>
-        <p class="motto14">Blablabla</p>
-        <p class="motto15">Blablabla</p>
+        <p class="motto12">Kapag binato ka ng bato,</p>
+        <p class="motto13">batuhin mo ng tinapay,</p>
+        <p class="motto14">pero lagay mo</p>
+        <p class="motto15">muna sa garapon.</p>
       <div class="iconsid1">
-        <a href="#" class="linkid1"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid1"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid1"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid1"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/sanaolIsda?_rdc=1&_rdr" class="linkid1"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid1"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a href="https://twitter.com/KapePa_1002?s=09" class="linkid1"><i class="fab fa-twitter"></i></a>
+        <a class="linkid1"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
