--- a/index.html
+++ b/index.html
@@ -3115,9 +3115,9 @@
 
 
 
-
+<!-- fuck -->
 <div class = "card1-container ins">
-  <div class = "card1"> 
+  <div class = "card1">
     <div class = "front1">
       <img class="img4" src="BoyIcon.png" alt="" />
       <h4 class="adminsign1"><a class="aadminsign1">Moderators</a></h4>
