--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
   }
 
   .front1{
-  background:linear-gradient(15deg , #4d4ef5 , #72f3ee);
+  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
   }
 
   .back1{
-  background:linear-gradient(135deg, #f35efa , #59fbfe);
+  background:linear-gradient(135deg , #fc6efa , #fe5758);
   transform:rotateY(-180deg);
   }
 
@@ -310,7 +310,7 @@
   .id1{
   position: absolute;
   bottom: 110px;
-  left: 50px;
+  left: 120px;
   /*transform: translateX(-50%);*/
   }
 
@@ -366,42 +366,6 @@
   animation-delay: .8s;
   }
 
-  .spanid1:nth-child(5){
-  animation-delay: 1s;
-  }
-
-  .spanid1:nth-child(6){
-  animation-delay: 1.2s;
-  }
-
-  .spanid1:nth-child(7){
-  animation-delay: 1.4;
-  }
-
-  .spanid1:nth-child(8){
-  animation-delay: 1.6s;
-  }
-
-  .spanid1:nth-child(9){
-  animation-delay: 1.8s;
-  }
-
-  .spanid1:nth-child(10){
-  animation-delay: 2s;
-  }
-
-  .spanid1:nth-child(11){
-  animation-delay: 2.2;
-  }
-
-  .spanid1:nth-child(12){
-  animation-delay: 2.4s;
-  }
-
-  .spanid1:nth-child(13){
-  animation-delay: 2.6s;
-  }
-
   .img4 {
   position: absolute;
   width: 100px;
@@ -448,8 +412,8 @@
   .motto12{
   position: absolute;
   bottom: 220px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 50px;
+  /*transform: translateX(-50%);*/
   color: #ff006a;
   font-size: 18px;
   }
@@ -457,8 +421,8 @@
   .motto13{
   position: absolute;
   bottom: 190px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 65px;
+  /*transform: translateX(-50%);*/
   color: #ff006a;
   font-size: 18px;
   }
@@ -466,8 +430,8 @@
   .motto14{
   position: absolute;
   bottom: 155px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 100px;
+  /*transform: translateX(-50%);*/
   color: #ff006a;
   font-size: 18px;
   }
@@ -475,8 +439,8 @@
   .motto15{
   position: absolute;
   bottom: 120px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 80px;
+  /*transform: translateX(-50%);*/
   color: #ff006a;
   font-size: 18px;
   }
@@ -3119,36 +3083,27 @@
 <div class = "card1-container ins">
   <div class = "card1">
     <div class = "front1">
-      <img class="img4" src="BoyIcon.png" alt="" />
-      <h4 class="adminsign1"><a class="aadminsign1">Moderators</a></h4>
+      <img class="img4" src="AraGhost.jpeg" alt="" />
+      <h4 class="adminsign1"><a class="aadminsign1">Moderator</a></h4>
         <div class="id1">
-          <span class="spanid1">M</span>
-          <span class="spanid1">O</span>
+          <span class="spanid1">I</span>
+          <span class="spanid1">S</span>
           <span class="spanid1">D</span>
-          <span class="spanid1">E</span>
-          <span class="spanid1">R</span>
           <span class="spanid1">A</span>
-          <span class="spanid1">T</span>
-          <span class="spanid1">O</span>
-          <span class="spanid1">R</span>
-          <span class="spanid1">N</span>
-          <span class="spanid1">A</span>
-          <span class="spanid1">M</span>
-          <span class="spanid1">E</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back1">
         <a class="mottosign1">Motto</a>
-        <p class="motto12">Blablabla</p>
-        <p class="motto13">Blablabla</p>
-        <p class="motto14">Blablabla</p>
-        <p class="motto15">Blablabla</p>
+        <p class="motto12">"Kapag binato ka ng bato,</p>
+        <p class="motto13">batuhin mo ng tinapay,</p>
+        <p class="motto14">pero lagay mo</p>
+        <p class="motto15">muna sa garapon."</p>
       <div class="iconsid1">
-        <a href="#" class="linkid1"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid1"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid1"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid1"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/sanaolIsda?_rdc=1&_rdr" class="linkid1"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid1"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a href="https://twitter.com/KapePa_1002?s=09" class="linkid1"><i class="fab fa-twitter"></i></a>
+        <a class="linkid1"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
