--- a/index.html
+++ b/index.html
@@ -552,8 +552,8 @@
   .id2{
   position: absolute;
   bottom: 110px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   }
 
   .id2 .spanid2{
@@ -626,22 +626,6 @@
 
   .spanid2:nth-child(9){
   animation-delay: 1.8s;
-  }
-
-  .spanid1:nth-child(10){
-  animation-delay: 2s;
-  }
-
-  .spanid1:nth-child(11){
-  animation-delay: 2.2;
-  }
-
-  .spanid1:nth-child(12){
-  animation-delay: 2.4s;
-  }
-
-  .spanid1:nth-child(13){
-  animation-delay: 2.6s;
   }
 
   .img5 {
@@ -3116,36 +3100,32 @@
 <div class = "card2-container ins">
   <div class = "card2">
     <div class = "front2">
-      <img class="img5" src="GirlIcon.png" alt="" />
-      <h4 class="adminsign2"><a class="aadminsign2">Moderators</a></h4>
+      <img class="img5" src="Grecianne.jpeg" alt="" />
+      <h4 class="adminsign2"><a class="aadminsign2">Moderator</a></h4>
         <div class="id2">
-          <span class="spanid2">M</span>
-          <span class="spanid2">O</span>
-          <span class="spanid2">D</span>
           <span class="spanid2">E</span>
-          <span class="spanid2">R</span>
+          <span class="spanid2">C</span>
+          <span class="spanid2">I</span>
           <span class="spanid2">A</span>
-          <span class="spanid2">T</span>
-          <span class="spanid2">O</span>
-          <span class="spanid2">R</span>
-          <span class="spanid2">N</span>
-          <span class="spanid2">A</span>
-          <span class="spanid2">M</span>
-          <span class="spanid2">E</span>
+          <span class="spanid2">_</span>
+          <span class="spanid2">F</span>
+          <span class="spanid2">H</span>
+          <span class="spanid2">Y</span>
+          <span class="spanid2">S</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back2">
         <a class="mottosign2">Motto</a>
-        <p class="motto22">Blablabla</p>
-        <p class="motto23">Blablabla</p>
-        <p class="motto24">Blablabla</p>
-        <p class="motto25">Blablabla</p>
+        <p class="motto22">"If you don't</p>
+        <p class="motto23">take risks, you</p>
+        <p class="motto24">can't create</p>
+        <p class="motto25">a future."</p>
       <div class="iconsid2">
-        <a href="#" class="linkid2"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid2"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid2"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid2"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/manay.geseng.9?_rdc=1&_rdr" class="linkid2"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid2"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a class="linkid2"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
+        <a class="linkid2"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
