--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
   bottom: 220px;
   left: 50px;
   /*transform: translateX(-50%);*/
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -423,7 +423,7 @@
   bottom: 190px;
   left: 65px;
   /*transform: translateX(-50%);*/
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -432,7 +432,7 @@
   bottom: 155px;
   left: 100px;
   /*transform: translateX(-50%);*/
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -441,7 +441,7 @@
   bottom: 120px;
   left: 80px;
   /*transform: translateX(-50%);*/
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -473,7 +473,7 @@
   inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
   0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
   transition:.4s;
-  color: #7e57c2;
+  color: #f7979a;
   }
 
   .linkid1:before{
