--- a/index.html
+++ b/index.html
@@ -788,11 +788,11 @@
   }
 
   .front3{
-  background:linear-gradient(15deg , #4d4ef5 , #72f3ee);
+  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
   }
 
   .back3{
-  background:linear-gradient(135deg, #f35efa , #59fbfe);
+  background:linear-gradient(135deg , #fc6efa , #fe5758);
   transform:rotateY(-180deg);
   }
 
@@ -905,6 +905,10 @@
   animation-delay: 2.6s;
   }
 
+  .spanid1:nth-child(14){
+  animation-delay: 2.8s;
+  }
+
   .img6 {
   position: absolute;
   width: 100px;
@@ -950,36 +954,18 @@
 
   .motto32{
   position: absolute;
-  bottom: 220px;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 200px;
+  left: 70px;
+  /*transform: translateX(-50%);*/
   color: #ff006a;
   font-size: 18px;
   }
 
   .motto33{
   position: absolute;
-  bottom: 190px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ff006a;
-  font-size: 18px;
-  }
-
-  .motto34{
-  position: absolute;
-  bottom: 155px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ff006a;
-  font-size: 18px;
-  }
-
-  .motto35{
-  position: absolute;
-  bottom: 120px;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 170px;
+  left: 50px;
+  /*transform: translateX(-50%);*/
   color: #ff006a;
   font-size: 18px;
   }
@@ -1012,7 +998,7 @@
   inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
   0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
   transition:.4s;
-  color: #7e57c2;
+  color: #f7979a;
   }
 
   .linkid3:before{
@@ -3138,36 +3124,35 @@
 <div class = "card3-container ins">
   <div class = "card3">
     <div class = "front3">
-      <img class="img6" src="BoyIcon.png" alt="" />
-      <h4 class="adminsign3"><a class="aadminsign3">Moderators</a></h4>
+      <img class="img6" src="PotaDePotato.jpeg" alt="" />
+      <h4 class="adminsign3"><a class="aadminsign3">Moderator</a></h4>
         <div class="id3">
-          <span class="spanid3">M</span>
+          <span class="spanid3">P</span>
           <span class="spanid3">O</span>
+          <span class="spanid3">T</span>
+          <span class="spanid3">A</span>
+          <span class="spanid3">_</span>
           <span class="spanid3">D</span>
           <span class="spanid3">E</span>
-          <span class="spanid3">R</span>
+          <span class="spanid3">_</span>
+          <span class="spanid3">P</span>
+          <span class="spanid3">O</span>
+          <span class="spanid3">T</span>
           <span class="spanid3">A</span>
           <span class="spanid3">T</span>
           <span class="spanid3">O</span>
-          <span class="spanid3">R</span>
-          <span class="spanid3">N</span>
-          <span class="spanid3">A</span>
-          <span class="spanid3">M</span>
-          <span class="spanid3">E</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back3">
         <a class="mottosign3">Motto</a>
-        <p class="motto32">Blablabla</p>
-        <p class="motto33">Blablabla</p>
-        <p class="motto34">Blablabla</p>
-        <p class="motto35">Blablabla</p>
+        <p class="motto32">"Wala akong motto,</p>
+        <p class="motto33">basta putangina niyo ahe"</p>
       <div class="iconsid3">
-        <a href="#" class="linkid3"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid3"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid3"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid3"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/gravintazalea.smith" class="linkid3"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid3"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a class="linkid3"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
+        <a class="linkid3"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
