--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@
   bottom: 200px;
   left: 70px;
   /*transform: translateX(-50%);*/
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -966,7 +966,7 @@
   bottom: 170px;
   left: 50px;
   /*transform: translateX(-50%);*/
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
