--- a/index.html
+++ b/index.html
@@ -1051,11 +1051,11 @@
   }
 
   .front4{
-  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
+  background:linear-gradient(15deg , #4d4ef5 , #72f3ee);
   }
 
   .back4{
-  background:linear-gradient(135deg, #fc6efa , #fe5758);
+  background:linear-gradient(135deg , #f35efa , #59fbfe);
   transform:rotateY(-180deg);
   }
 
@@ -1076,8 +1076,8 @@
   .id4{
   position: absolute;
   bottom: 110px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   }
 
   .id4 .spanid4{
@@ -1144,30 +1144,6 @@
   animation-delay: 1.4;
   }
 
-  .spanid4:nth-child(8){
-  animation-delay: 1.6s;
-  }
-
-  .spanid4:nth-child(9){
-  animation-delay: 1.8s;
-  }
-
-  .spanid1:nth-child(10){
-  animation-delay: 2s;
-  }
-
-  .spanid1:nth-child(11){
-  animation-delay: 2.2;
-  }
-
-  .spanid1:nth-child(12){
-  animation-delay: 2.4s;
-  }
-
-  .spanid1:nth-child(13){
-  animation-delay: 2.6s;
-  }
-
   .img7 {
   position: absolute;
   width: 100px;
@@ -1213,37 +1189,19 @@
 
   .motto42{
   position: absolute;
-  bottom: 220px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #42ecf5;
+  bottom: 200px;
+  left: 80px;
+  /*transform: translateX(-50%);*/
+  color: #ec66fa;
   font-size: 18px;
   }
 
   .motto43{
   position: absolute;
-  bottom: 190px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #42ecf5;
-  font-size: 18px;
-  }
-
-  .motto44{
-  position: absolute;
-  bottom: 155px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #42ecf5;
-  font-size: 18px;
-  }
-
-  .motto45{
-  position: absolute;
-  bottom: 120px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #42ecf5;
+  bottom: 170px;
+  left: 50px;
+  /*transform: translateX(-50%);*/
+  color: #ec66fa;
   font-size: 18px;
   }
 
@@ -3165,36 +3123,28 @@
 <div class = "card4-container ins">
   <div class = "card4">
     <div class = "front4">
-      <img class="img7" src="GirlIcon.png" alt="" />
-      <h4 class="adminsign4"><a class="aadminsign4">Moderators</a></h4>
+      <img class="img7" src="FlipTop.jpeg" alt="" />
+      <h4 class="adminsign4"><a class="aadminsign4">Moderator</a></h4>
         <div class="id4">
-          <span class="spanid4">M</span>
-          <span class="spanid4">O</span>
-          <span class="spanid4">D</span>
-          <span class="spanid4">E</span>
-          <span class="spanid4">R</span>
-          <span class="spanid4">A</span>
+          <span class="spanid4">F</span>
+          <span class="spanid4">L</span>
+          <span class="spanid4">I</span>
+          <span class="spanid4">P</span>
           <span class="spanid4">T</span>
           <span class="spanid4">O</span>
-          <span class="spanid4">R</span>
-          <span class="spanid4">N</span>
-          <span class="spanid4">A</span>
-          <span class="spanid4">M</span>
-          <span class="spanid4">E</span>
+          <span class="spanid4">P</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back4">
         <a class="mottosign4">Motto</a>
-        <p class="motto42">Blablabla</p>
-        <p class="motto43">Blablabla</p>
-        <p class="motto44">Blablabla</p>
-        <p class="motto45">Blablabla</p>
+        <p class="motto42">"If you didn't fail,</p>
+        <p class="motto43">you didn't try new things"</p>
       <div class="iconsid4">
-        <a href="#" class="linkid4"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid4"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid4"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid4"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/profile.php?id=100048540653463&_rdc=3&_rdr" class="linkid4"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/simonvictorio/?igshid=1t5s0lnhct21p&fbclid=IwAR0jtbl5O53voDyEXrio-300m26iXaQVvzro6SQi-oe38ouwkc12EbdAUC4" class="linkid4"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/LemonVictorio?s=20&fbclid=IwAR2QGs9zJsAVaja50sRJRvB0VUClJN-zDSwEWZq-g-HN357njb6srqXUWw8" class="linkid4"><i class="fab fa-twitter"></i></a>
+        <a class="linkid4"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
