--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@
   inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
   0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
   transition:.4s;
-  color: #f7979a;
+  color: #7e57c2;
   }
 
   .linkid4:before{
