--- a/index.html
+++ b/index.html
@@ -1286,11 +1286,11 @@
   }
 
   .front5{
-  background:linear-gradient(15deg , #4d4ef5 , #72f3ee);
+  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
   }
 
   .back5{
-  background:linear-gradient(135deg, #f35efa , #59fbfe);
+  background:linear-gradient(135deg , #fc6efa , #fe5758);
   transform:rotateY(-180deg);
   }
 
@@ -1311,8 +1311,8 @@
   .id5{
   position: absolute;
   bottom: 110px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   }
 
   .id5 .spanid5{
@@ -1371,38 +1371,6 @@
   animation-delay: 1s;
   }
 
-  .spanid5:nth-child(6){
-  animation-delay: 1.2s;
-  }
-
-  .spanid5:nth-child(7){
-  animation-delay: 1.4;
-  }
-
-  .spanid5:nth-child(8){
-  animation-delay: 1.6s;
-  }
-
-  .spanid5:nth-child(9){
-  animation-delay: 1.8s;
-  }
-
-  .spanid1:nth-child(10){
-  animation-delay: 2s;
-  }
-
-  .spanid1:nth-child(11){
-  animation-delay: 2.2;
-  }
-
-  .spanid1:nth-child(12){
-  animation-delay: 2.4s;
-  }
-
-  .spanid1:nth-child(13){
-  animation-delay: 2.6s;
-  }
-
   .img8 {
   position: absolute;
   width: 100px;
@@ -1449,36 +1417,27 @@
   .motto52{
   position: absolute;
   bottom: 220px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ff006a;
+  left: 70px;
+  /*transform: translateX(-50%);*/
+  color: #42ecf5;
   font-size: 18px;
   }
 
   .motto53{
   position: absolute;
   bottom: 190px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ff006a;
+  left: 50px;
+  /*transform: translateX(-50%);*/
+  color: #42ecf5;
   font-size: 18px;
   }
 
   .motto54{
   position: absolute;
   bottom: 155px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ff006a;
-  font-size: 18px;
-  }
-
-  .motto55{
-  position: absolute;
-  bottom: 120px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #ff006a;
+  left: 40px;
+  /*transform: translateX(-50%);*/
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -1510,7 +1469,7 @@
   inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
   0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
   transition:.4s;
-  color: #7e57c2;
+  color: #f7979a;
   }
 
   .linkid5:before{
@@ -3157,36 +3116,27 @@
 <div class = "card5-container ins">
   <div class = "card5">
     <div class = "front5">
-      <img class="img8" src="BoyIcon.png" alt="" />
-      <h4 class="adminsign5"><a class="aadminsign5">Moderators</a></h4>
+      <img class="img8" src="Preng.jpeg" alt="" />
+      <h4 class="adminsign5"><a class="aadminsign5">Moderator</a></h4>
         <div class="id5">
-          <span class="spanid5">M</span>
-          <span class="spanid5">O</span>
-          <span class="spanid5">D</span>
+          <span class="spanid5">P</span>
+          <span class="spanid5">R</span>
           <span class="spanid5">E</span>
-          <span class="spanid5">R</span>
-          <span class="spanid5">A</span>
-          <span class="spanid5">T</span>
-          <span class="spanid5">O</span>
-          <span class="spanid5">R</span>
           <span class="spanid5">N</span>
-          <span class="spanid5">A</span>
-          <span class="spanid5">M</span>
-          <span class="spanid5">E</span>
+          <span class="spanid5">G</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back5">
         <a class="mottosign5">Motto</a>
-        <p class="motto52">Blablabla</p>
-        <p class="motto53">Blablabla</p>
-        <p class="motto54">Blablabla</p>
-        <p class="motto55">Blablabla</p>
+        <p class="motto52">"Live everyday to the</p>
+        <p class="motto53">fullest. When going to the</p>
+        <p class="motto54">bathroom take a newspaper!"</p>
       <div class="iconsid5">
-        <a href="#" class="linkid5"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid5"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid5"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid5"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/lyzxcvbnm/?_rdc=1&_rdr" class="linkid5"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid5"><abbr title="Not Available"><i class="fab fa-instagram"></abbr></i></a>
+        <a class="linkid5"><abbr title="Not Available"><i class="fab fa-twitter"></abbr></i></a>
+        <a class="linkid5"><abbr title="Not Available"><i class="fab fa-whatsapp"></abbr></i></a>
       </div>
     </div>
   </div>
