--- a/index.html
+++ b/index.html
@@ -813,8 +813,8 @@
   .id3{
   position: absolute;
   bottom: 110px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   }
 
   .id3 .spanid3{
@@ -869,46 +869,6 @@
   animation-delay: .8s;
   }
 
-  .spanid3:nth-child(5){
-  animation-delay: 1s;
-  }
-
-  .spanid3:nth-child(6){
-  animation-delay: 1.2s;
-  }
-
-  .spanid3:nth-child(7){
-  animation-delay: 1.4;
-  }
-
-  .spanid3:nth-child(8){
-  animation-delay: 1.6s;
-  }
-
-  .spanid3:nth-child(9){
-  animation-delay: 1.8s;
-  }
-
-  .spanid1:nth-child(10){
-  animation-delay: 2s;
-  }
-
-  .spanid1:nth-child(11){
-  animation-delay: 2.2;
-  }
-
-  .spanid1:nth-child(12){
-  animation-delay: 2.4s;
-  }
-
-  .spanid1:nth-child(13){
-  animation-delay: 2.6s;
-  }
-
-  .spanid1:nth-child(14){
-  animation-delay: 2.8s;
-  }
-
   .img6 {
   position: absolute;
   width: 100px;
@@ -955,8 +915,8 @@
   .motto32{
   position: absolute;
   bottom: 200px;
-  left: 70px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
   }
@@ -964,8 +924,8 @@
   .motto33{
   position: absolute;
   bottom: 170px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
   }
@@ -3041,34 +3001,24 @@
 <div class = "card3-container ins">
   <div class = "card3">
     <div class = "front3">
-      <img class="img6" src="PotaDePotato.jpeg" alt="" />
+      <img class="img6" src="Lily.jpeg" alt="" />
       <h4 class="adminsign3"><a class="aadminsign3">Moderator</a></h4>
         <div class="id3">
-          <span class="spanid3">P</span>
-          <span class="spanid3">O</span>
-          <span class="spanid3">T</span>
-          <span class="spanid3">A</span>
-          <span class="spanid3">_</span>
-          <span class="spanid3">D</span>
-          <span class="spanid3">E</span>
-          <span class="spanid3">_</span>
-          <span class="spanid3">P</span>
-          <span class="spanid3">O</span>
-          <span class="spanid3">T</span>
-          <span class="spanid3">A</span>
-          <span class="spanid3">T</span>
-          <span class="spanid3">O</span>
+          <span class="spanid3">L</span>
+          <span class="spanid3">I</span>
+          <span class="spanid3">L</span>
+          <span class="spanid3">Y</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back3">
         <a class="mottosign3">Motto</a>
-        <p class="motto32">"Wala akong motto,</p>
-        <p class="motto33">basta putangina niyo ahe"</p>
+        <p class="motto32">"Life is thought,</p>
+        <p class="motto33">but so are you."</p>
       <div class="iconsid3">
-        <a href="https://web.facebook.com/gravintazalea.smith" class="linkid3"><i class="fab fa-facebook-f"></i></a>
-        <a class="linkid3"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
-        <a class="linkid3"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
+        <a href="https://web.facebook.com/lyzxcvbnm?_rdc=1&_rdr" class="linkid3"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/lyakiee/?igshid=17cjduwpcnehb&fbclid=IwAR3g2WQlMUyDcaZm6YtbTCOZf9CeCT_D3-hl2swgooO28wKYchvzOi6YGcs" class="linkid3"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/Asteridd1?s=09&fbclid=IwAR1WXDq2cws6M2ty9pU_9E6giqfX9Rpw0JGxb-8zPwMxeQrOHLR0Cjeb1cc" class="linkid3"><i class="fab fa-twitter"></i></a>
         <a class="linkid3"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
@@ -3133,9 +3083,9 @@
         <p class="motto53">fullest. When going to the</p>
         <p class="motto54">bathroom take a newspaper!"</p>
       <div class="iconsid5">
-        <a href="https://web.facebook.com/lyzxcvbnm/?_rdc=1&_rdr" class="linkid5"><i class="fab fa-facebook-f"></i></a>
-        <a class="linkid5"><abbr title="Not Available"><i class="fab fa-instagram"></abbr></i></a>
-        <a class="linkid5"><abbr title="Not Available"><i class="fab fa-twitter"></abbr></i></a>
+        <a href="https://web.facebook.com/precious.jandugan.7?_rdc=1&_rdr" class="linkid5"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/prengelsz/?igshid=1v10hamh3flaeyyan&fbclid=IwAR3dgVuOWEgweKNwHXXdGqRO3voQI4MdOyu982DriH6RCRzcD-ejdHxutms" class="linkid5"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/prengelsz?s=07&fbclid=IwAR27DUZOUzThawn0nR4Kg8SSJw_-2dgmptS9yI-9Ztyh5jZrGNOunsaDBIw" class="linkid5"><i class="fab fa-twitter"></i></a>
         <a class="linkid5"><abbr title="Not Available"><i class="fab fa-whatsapp"></abbr></i></a>
       </div>
     </div>
