--- a/index.html
+++ b/index.html
@@ -1507,8 +1507,8 @@
   .id6{
   position: absolute;
   bottom: 110px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   }
 
   .id6 .spanid6{
@@ -1759,11 +1759,11 @@
   }
 
   .front7{
-  background:linear-gradient(15deg , #4d4ef5 , #72f3ee);
+  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
   }
 
   .back7{
-  background:linear-gradient(135deg, #f35efa , #59fbfe);
+  background:linear-gradient(135deg , #fc6efa , #fe5758);
   transform:rotateY(-180deg);
   }
 
@@ -1784,8 +1784,8 @@
   .id7{
   position: absolute;
   bottom: 110px;
-  left: 50px;
-  /*transform: translateX(-50%);*/
+  left: 50%;
+  transform: translateX(-50%);
   }
 
   .id7 .spanid7{
@@ -1924,7 +1924,7 @@
   bottom: 220px;
   left: 50%;
   transform: translateX(-50%);
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -1933,7 +1933,7 @@
   bottom: 190px;
   left: 50%;
   transform: translateX(-50%);
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -1942,7 +1942,7 @@
   bottom: 155px;
   left: 50%;
   transform: translateX(-50%);
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -1951,7 +1951,7 @@
   bottom: 120px;
   left: 50%;
   transform: translateX(-50%);
-  color: #ff006a;
+  color: #42ecf5;
   font-size: 18px;
   }
 
@@ -1983,7 +1983,7 @@
   inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
   0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
   transition:.4s;
-  color: #7e57c2;
+  color: #f7979a;
   }
 
   .linkid7:before{
@@ -3099,36 +3099,26 @@
 <div class = "card6-container ins">
   <div class = "card6">
     <div class = "front6">
-      <img class="img9" src="GirlIcon.png" alt="" />
-      <h4 class="adminsign6"><a class="aadminsign6">Moderators</a></h4>
+      <img class="img9" src="Cala.jpeg" alt="" />
+      <h4 class="adminsign6"><a class="aadminsign6">Moderator</a></h4>
         <div class="id6">
-          <span class="spanid6">M</span>
-          <span class="spanid6">O</span>
-          <span class="spanid6">D</span>
-          <span class="spanid6">E</span>
-          <span class="spanid6">R</span>
+          <span class="spanid6">C</span>
           <span class="spanid6">A</span>
-          <span class="spanid6">T</span>
-          <span class="spanid6">O</span>
-          <span class="spanid6">R</span>
-          <span class="spanid6">N</span>
+          <span class="spanid6">L</span>
           <span class="spanid6">A</span>
-          <span class="spanid6">M</span>
-          <span class="spanid6">E</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back6">
         <a class="mottosign6">Motto</a>
-        <p class="motto62">Blablabla</p>
-        <p class="motto63">Blablabla</p>
-        <p class="motto64">Blablabla</p>
-        <p class="motto65">Blablabla</p>
+        <p class="motto62">"Be yourself.</p>
+        <p class="motto63">Everyone else</p>
+        <p class="motto64">is already taken."</p>
       <div class="iconsid6">
-        <a href="#" class="linkid6"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid6"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid6"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid6"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/han.ley.10048?_rdc=1&_rdr" class="linkid6"><i class="fab fa-facebook-f"></i></a>
+        <a class="linkid6"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+        <a href="https://twitter.com/CalanthaEllie?s=07" class="linkid6"><i class="fab fa-twitter"></i></a>
+        <a class="linkid6"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
@@ -3141,36 +3131,32 @@
 <div class = "card7-container ins">
   <div class = "card7">
     <div class = "front7">
-      <img class="img10" src="BoyIcon.png" alt="" />
-      <h4 class="adminsign7"><a class="aadminsign7">Moderators</a></h4>
+      <img class="img10" src="Annjelain.jpeg" alt="" />
+      <h4 class="adminsign7"><a class="aadminsign7">Moderator</a></h4>
         <div class="id7">
-          <span class="spanid7">M</span>
-          <span class="spanid7">O</span>
-          <span class="spanid7">D</span>
-          <span class="spanid7">E</span>
-          <span class="spanid7">R</span>
           <span class="spanid7">A</span>
-          <span class="spanid7">T</span>
-          <span class="spanid7">O</span>
-          <span class="spanid7">R</span>
           <span class="spanid7">N</span>
-          <span class="spanid7">A</span>
-          <span class="spanid7">M</span>
+          <span class="spanid7">N</span>
+          <span class="spanid7">J</span>
           <span class="spanid7">E</span>
+          <span class="spanid7">L</span>
+          <span class="spanid7">A</span>
+          <span class="spanid7">I</span>
+          <span class="spanid7">N</span>
         </div>
       <p class="cardlabel">Click the card for more info</p>
     </div>
     <div class = "back7">
         <a class="mottosign7">Motto</a>
-        <p class="motto72">Blablabla</p>
-        <p class="motto73">Blablabla</p>
-        <p class="motto74">Blablabla</p>
-        <p class="motto75">Blablabla</p>
+        <p class="motto72">"Trust in God,</p>
+        <p class="motto73">Pursue your </p>
+        <p class="motto74">dream and</p>
+        <p class="motto75">Work hard"</p>
       <div class="iconsid7">
-        <a href="#" class="linkid7"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="linkid7"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="linkid7"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="linkid7"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://web.facebook.com/annjelain.fajilagot?_rdc=1&_rdr" class="linkid7"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/annjelain.fajilagot/?igshid=137lw4hcyomxf" class="linkid7"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/annjelainfajil4?s=09" class="linkid7"><i class="fab fa-twitter"></i></a>
+        <a class="linkid7"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
       </div>
     </div>
   </div>
