--- a/index.html
+++ b/index.html
@@ -4513,16 +4513,16 @@
 
   .motto162{
   position: absolute;
-  bottom: 220px;
-  left: 70px;
-  /*transform: translateX(-50%);*/
+  bottom: 200px;
+  left: 50%;
+  transform: translateX(-50%);
   color: #42ecf5;
   font-size: 18px;
   }
 
   .motto163{
   position: absolute;
-  bottom: 190px;
+  bottom: 170px;
   left: 50%;
   transform: translateX(-50%);
   color: #42ecf5;
@@ -7720,10 +7720,8 @@
     </div>
     <div class = "back16">
         <a class="mottosign16">Motto</a>
-        <p class="motto162">"Wala syang binigay</p>
-        <p class="motto163">kaya ako na lang.</p>
-        <p class="motto164">*Hindi green</p>
-        <p class="motto165">ang Puregold*."</p>
+        <p class="motto162">"Hindi green</p>
+        <p class="motto163">ang Puregold."</p>
       <div class="iconsid16">
         <a href="https://www.facebook.com/ennairaoliec.oznola" class="linkid16"><i class="fab fa-facebook-f"></i></a>
         <a class="linkid16"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
