--- a/index.html
+++ b/index.html
@@ -264,7 +264,555 @@
 
 
 
-/* */
+  .card31-container{
+  width:300px;
+  height:400px;
+  border-radius:4px;
+  perspective:980px;
+  background-color:transparent;
+  }
+
+  .card31{
+  position:relative;
+  width:100%;
+  height:100%;
+  transition:all .7s;
+  transform-style:preserve-3d;
+  }
+
+  .card31-container:hover .card31{
+  transform:rotateY(-180deg);
+  }
+
+  .front31{
+  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
+  }
+
+  .back31{
+  background:linear-gradient(135deg, #fc6efa , #fe5758);
+  transform:rotateY(-180deg);
+  }
+
+  .front31 , .back31{
+  position:absolute;
+  width:100%;
+  height:100%;
+  display:flex;
+  /*align-items:center;
+  justify-content:center;*/
+  color:white;
+  border-radius:4px;
+  box-shadow:0 10px 20px rgba(0, 0, 0, .19),
+                         0 6px 6px rgba(0, 0, 0,.23);
+                         backface-visibility:hidden;
+                         }
+
+  .id31{
+  position: absolute;
+  bottom: 110px;
+  left: 50%;
+  transform: translateX(-50%);
+  }
+
+  .id31 .spanid31{
+  color:#ffffff;
+  font-size:15px;
+  font-weight:bolder;
+  letter-spacing:1px;
+  animation: light 3s infinite;
+  }
+
+  @keyframes light{
+
+    0%, 20%{
+    color:#fee5e9;
+    text-shadow: 0 0 10px #d03f4a;
+    }
+
+    40%{
+    color:#f4f3f5;
+    text-shadow:0 0 10px #1b3ba8;
+    }
+
+    60%{
+    color:#caa074;
+    text-shadow:0 0 10px #2f1704;
+    }
+
+    80%{
+    color:#8a98ae;
+    text-shadow:0 0 10px #283446;
+    }
+
+    100%{
+    color:#efeeb5;
+    text-shadow:0 0 10px #2a290c;
+    }
+  }
+
+  .spanid31:nth-child(1){
+  animation-delay: .2s;
+  }
+
+  .spanid31:nth-child(2){
+  animation-delay: .4s;
+  }
+
+  .spanid31:nth-child(3){
+  animation-delay: .6;
+  }
+
+  .spanid31:nth-child(4){
+  animation-delay: .8s;
+  }
+
+  .spanid31:nth-child(5){
+  animation-delay: 1s;
+  }
+
+  .spanid31:nth-child(6){
+  animation-delay: 1.2s;
+  }
+
+  .spanid31:nth-child(7){
+  animation-delay: 1.4;
+  }
+
+  .spanid31:nth-child(8){
+  animation-delay: 1.6s;
+  }
+
+  .spanid31:nth-child(9){
+  animation-delay: 1.8s;
+  }
+
+  .spanid31:nth-child(10){
+  animation-delay: 2s;
+  }
+
+  .spanid31:nth-child(11){
+  animation-delay: 2.2;
+  }
+
+  .spanid31:nth-child(12){
+  animation-delay: 2.4s;
+  }
+
+  .spanid31:nth-child(13){
+  animation-delay: 2.6s;
+  }
+
+  .img3000 {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  top: 80px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  }
+
+  .adminsign31 {
+  position: absolute;
+  bottom: 160px;
+  left: 50%;
+  transform: translateX(-50%);
+  }
+  .adminsign31 .aadminsign31 {
+  text-decoration: none;
+  padding: 10px 30px;
+  color: #3ffc5b;
+  border: solid 3px #3ffc5b;
+  border-radius: 18px;
+  }
+
+  .mottosign31 {
+  position: absolute;
+  bottom: 280px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #3ffc5b;
+  font-size: 30px;
+  }
+
+  .motto31{
+  position: absolute;
+  bottom: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ec66fa;
+  font-size: 18px;
+  }
+
+  .motto312{
+  position: absolute;
+  bottom: 220px;
+  left: 60px;
+  /*transform: translateX(-50%);*/
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .motto313{
+  position: absolute;
+  bottom: 190px;
+  left: 73px;
+  /*transform: translateX(-50%);*/
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .motto314{
+  position: absolute;
+  bottom: 155px;
+  left: 100px;
+  /*transform: translateX(-50%);*/
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .motto315{
+  position: absolute;
+  bottom: 120px;
+  left: 88px;
+  /*transform: translateX(-50%);*/
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .iconsid31 {
+  position: absolute;
+  bottom: 20px;
+  height: 100px;
+  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  }
+
+  .linkid31{
+  position:relative;
+  display:block;
+  width:40px;
+  height:40px;
+  font-size:20px;
+  line-height:40px;
+  background:#1b1b1b;
+  margin:7px;
+  cursor:pointer;
+  border-radius:50%;
+  text-align:center;
+  box-shadow:0 2px 3px rgba(0,0,0,1), inset 0 -1px 4px rgba(0,0,0,1),
+  inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
+  0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
+  transition:.4s;
+  color: #f7979a;
+  }
+
+  .linkid31:before{
+  position:absolute:
+  content: " ";
+  top:0;
+  left:0;
+  background:cadetblue;
+  height:100%;
+  width:100%;
+  border-radius:50%;
+  z-index:-2;
+  transform:scale(0.5);
+  transition:0.3s;
+  }
+
+  .linkid31:hover:before{
+  filter:blur(3px);
+  transform:scale(1.2);
+  box-shadow:0 0 9 rgba(0,0,0,1), inset 0 -1px 4px rbga(0,0,0,1), inset 0px 1px rgba(225,225,225,.1),
+  0 0 0 1px #000,0 0 0 1px #0095ff,0 0 9px 8px #0095ff;
+  }
+
+  .linkid31:hover {
+  color:#0095ff;
+  }
+
+
+
+
+
+  .card32-container{
+  width:300px;
+  height:400px;
+  border-radius:4px;
+  perspective:980px;
+  background-color:transparent;
+  }
+
+  .card32{
+  position:relative;
+  width:100%;
+  height:100%;
+  transition:all .7s;
+  transform-style:preserve-3d;
+  }
+
+  .card32-container:hover .card32{
+  transform:rotateY(-180deg);
+  }
+
+  .front32{
+  background:linear-gradient(135deg , #fe5dfd , #f7fa63);
+  }
+
+  .back32{
+  background:linear-gradient(135deg, #fc6efa , #fe5758);
+  transform:rotateY(-180deg);
+  }
+
+  .front32 , .back32{
+  position:absolute;
+  width:100%;
+  height:100%;
+  display:flex;
+  /*align-items:center;
+  justify-content:center;*/
+  color:white;
+  border-radius:4px;
+  box-shadow:0 10px 20px rgba(0, 0, 0, .19),
+                         0 6px 6px rgba(0, 0, 0,.23);
+                         backface-visibility:hidden;
+                         }
+
+  .id32{
+  position: absolute;
+  bottom: 110px;
+  left: 50%;
+  transform: translateX(-50%);
+  }
+
+  .id32 .spanid32{
+  color:#ffffff;
+  font-size:15px;
+  font-weight:bolder;
+  letter-spacing:1px;
+  animation: light 3s infinite;
+  }
+
+  @keyframes light{
+
+    0%, 20%{
+    color:#fee5e9;
+    text-shadow: 0 0 10px #d03f4a;
+    }
+
+    40%{
+    color:#f4f3f5;
+    text-shadow:0 0 10px #1b3ba8;
+    }
+
+    60%{
+    color:#caa074;
+    text-shadow:0 0 10px #2f1704;
+    }
+
+    80%{
+    color:#8a98ae;
+    text-shadow:0 0 10px #283446;
+    }
+
+    100%{
+    color:#efeeb5;
+    text-shadow:0 0 10px #2a290c;
+    }
+  }
+
+  .spanid32:nth-child(1){
+  animation-delay: .2s;
+  }
+
+  .spanid32:nth-child(2){
+  animation-delay: .4s;
+  }
+
+  .spanid32:nth-child(3){
+  animation-delay: .6;
+  }
+
+  .spanid32:nth-child(4){
+  animation-delay: .8s;
+  }
+
+  .spanid32:nth-child(5){
+  animation-delay: 1s;
+  }
+
+  .spanid32:nth-child(6){
+  animation-delay: 1.2s;
+  }
+
+  .spanid32:nth-child(7){
+  animation-delay: 1.4;
+  }
+
+  .spanid32:nth-child(8){
+  animation-delay: 1.6s;
+  }
+
+  .spanid32:nth-child(9){
+  animation-delay: 1.8s;
+  }
+
+  .spanid32:nth-child(10){
+  animation-delay: 2s;
+  }
+
+  .spanid32:nth-child(11){
+  animation-delay: 2.2;
+  }
+
+  .spanid32:nth-child(12){
+  animation-delay: 2.4s;
+  }
+
+  .spanid32:nth-child(13){
+  animation-delay: 2.6s;
+  }
+
+  .img3001 {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  top: 80px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  }
+
+  .adminsign32 {
+  position: absolute;
+  bottom: 160px;
+  left: 50%;
+  transform: translateX(-50%);
+  }
+  .adminsign32 .aadminsign32 {
+  text-decoration: none;
+  padding: 10px 30px;
+  color: #3ffc5b;
+  border: solid 3px #3ffc5b;
+  border-radius: 18px;
+  }
+
+  .mottosign32 {
+  position: absolute;
+  bottom: 280px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #3ffc5b;
+  font-size: 30px;
+  }
+
+  .motto32{
+  position: absolute;
+  bottom: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #ec66fa;
+  font-size: 18px;
+  }
+
+  .motto322{
+  position: absolute;
+  bottom: 220px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .motto323{
+  position: absolute;
+  bottom: 190px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .motto324{
+  position: absolute;
+  bottom: 155px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .motto325{
+  position: absolute;
+  bottom: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #42ecf5;
+  font-size: 18px;
+  }
+
+  .iconsid32 {
+  position: absolute;
+  bottom: 20px;
+  height: 100px;
+  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  }
+
+  .linkid32{
+  position:relative;
+  display:block;
+  width:40px;
+  height:40px;
+  font-size:20px;
+  line-height:40px;
+  background:#1b1b1b;
+  margin:7px;
+  cursor:pointer;
+  border-radius:50%;
+  text-align:center;
+  box-shadow:0 2px 3px rgba(0,0,0,1), inset 0 -1px 4px rgba(0,0,0,1),
+  inset 1px -1px  4px rgba(0,0,0,1), inset 1px -1px 6px 0  rgba(225,225,225,.5),
+  0 0 1px 1px #000,0 0 1px 4px #0c0c0c,0 0 0 4px #080808;
+  transition:.4s;
+  color: #f7979a;
+  }
+
+  .linkid32:before{
+  position:absolute:
+  content: " ";
+  top:0;
+  left:0;
+  background:cadetblue;
+  height:100%;
+  width:100%;
+  border-radius:50%;
+  z-index:-2;
+  transform:scale(0.5);
+  transition:0.3s;
+  }
+
+  .linkid32:hover:before{
+  filter:blur(3px);
+  transform:scale(1.2);
+  box-shadow:0 0 9 rgba(0,0,0,1), inset 0 -1px 4px rbga(0,0,0,1), inset 0px 1px rgba(225,225,225,.1),
+  0 0 0 1px #000,0 0 0 1px #0095ff,0 0 9px 8px #0095ff;
+  }
+
+  .linkid32:hover {
+  color:#0095ff;
+  }
 
 
 
@@ -6684,7 +7232,72 @@
 
 
 
-<!-- -->
+      <div class = "card31-container ins">
+        <div class = "card31">
+          <div class = "front31">
+            <img class="img3000" src="AraGhost.jpeg" alt="" />
+            <h4 class="adminsign31"><a class="aadminsign31">Moderator</a></h4>
+              <div class="id31">
+                <span class="spanid31">I</span>
+                <span class="spanid31">S</span>
+                <span class="spanid31">D</span>
+                <span class="spanid31">A</span>
+              </div>
+            <p class="cardlabel">Click the card for more info</p>
+          </div>
+          <div class = "back31">
+              <a class="mottosign31">Motto</a>
+              <p class="motto312">"Kapag binato ka ng bato,</p>
+              <p class="motto313">batuhin mo ng tinapay,</p>
+              <p class="motto314">pero lagay mo</p>
+              <p class="motto315">muna sa garapon."</p>
+            <div class="iconsid31">
+              <a href="https://web.facebook.com/sanaolIsda?_rdc=1&_rdr" class="linkid31"><i class="fab fa-facebook-f"></i></a>
+              <a class="linkid31"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+              <a href="https://twitter.com/KapePa_1002?s=09" class="linkid31"><i class="fab fa-twitter"></i></a>
+              <a class="linkid31"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+      <div class = "card32-container ins">
+        <div class = "card32">
+          <div class = "front32">
+            <img class="img3001" src="Grecianne.jpeg" alt="" />
+            <h4 class="adminsign32"><a class="aadminsign32">Moderator</a></h4>
+              <div class="id32">
+                <span class="spanid32">E</span>
+                <span class="spanid32">C</span>
+                <span class="spanid32">I</span>
+                <span class="spanid32">A</span>
+                <span class="spanid32">_</span>
+                <span class="spanid32">F</span>
+                <span class="spanid32">H</span>
+                <span class="spanid32">Y</span>
+                <span class="spanid32">S</span>
+              </div>
+            <p class="cardlabel">Click the card for more info</p>
+          </div>
+          <div class = "back32">
+              <a class="mottosign32">Motto</a>
+              <p class="motto322">"If you don't</p>
+              <p class="motto323">take risks, you</p>
+              <p class="motto324">can't create</p>
+              <p class="motto325">a future."</p>
+            <div class="iconsid32">
+              <a href="https://web.facebook.com/manay.geseng.9?_rdc=1&_rdr" class="linkid32"><i class="fab fa-facebook-f"></i></a>
+              <a class="linkid32"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
+              <a class="linkid32"><abbr title="Not Available"><i class="fab fa-twitter"></i></abbr></a>
+              <a class="linkid32"><abbr title="Not Available"><i class="fab fa-whatsapp"></i></abbr></a>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
