--- a/index.html
+++ b/index.html
@@ -6780,7 +6780,7 @@
 
   .motto242{
   position: absolute;
-  bottom: 200px;
+  bottom: 210px;
   left: 50%;
   transform: translateX(-50%);
   color: #42ecf5;
@@ -6789,7 +6789,7 @@
 
   .motto243{
   position: absolute;
-  bottom: 170px;
+  bottom: 180px;
   left: 50%;
   transform: translateX(-50%);
   color: #42ecf5;
@@ -6798,7 +6798,7 @@
 
   .motto244{
   position: absolute;
-  bottom: 155px;
+  bottom: 150px;
   left: 50%;
   transform: translateX(-50%);
   color: #42ecf5;
@@ -8143,7 +8143,7 @@
     </div>
     <div class = "back3">
         <a class="mottosign3">Motto</a>
-        <p class="motto32">"Life is thought,</p>
+        <p class="motto32">"Life is tough,</p>
         <p class="motto33">but so are you."</p>
       <div class="iconsid3">
         <a href="https://web.facebook.com/lyzxcvbnm?_rdc=1&_rdr" class="linkid3"><i class="fab fa-facebook-f"></i></a>
@@ -8866,8 +8866,9 @@
     </div>
     <div class = "back24">
         <a class="mottosign24">Motto</a>
-        <p class="motto242">"Honesty is the</p>
-        <p class="motto243">best policy."</p>
+        <p class="motto242">"Quam bene</p>
+        <p class="motto243">vivas refert</p>
+        <p class="motto243">non quam diu."</p>
       <div class="iconsid24">
         <a href="https://www.facebook.com/kreiannn" class="linkid24"><i class="fab fa-facebook-f"></i></a>
         <a class="linkid24"><abbr title="Not Available"><i class="fab fa-instagram"></i></abbr></a>
